fix small changes in backend and frontend for docker